Users: Improve the birthday field Now you can hide the year of birth. Also people who were born on January 1, 1970 can specify their date of birth

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -90,6 +90,9 @@
 "years_one" = "1 year old";
 "years_other" = "$1 years old";
 
+"show_my_birthday" = "Show my birthday";
+"show_only_month_and_day" = "Show only month and day";
+
 "relationship" = "Relationship";
 
 "relationship_0" = "Not selected";
