Friends: Add list with friends online

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -216,6 +216,8 @@
 "incoming_req" = "Входящие";
 "outcoming_req" = "Исходящие";
 "req" = "Заявки";
+"friends_online" = "Друзья он-лайн";
+"all_friends" = "Все друзья"; 
 
 "req_zero" = "Не найдено ни одной заявки...";
 "req_one" = "Найдена $1 заявка";
@@ -228,6 +230,12 @@
 "friends_few" = "$1 друга";
 "friends_many" = "$1 друзей";
 "friends_other" = "$1 друзей";
+
+"friends_online_zero" = "Ни одного друга он-лайн";
+"friends_online_one" = "$1 друг он-лайн";
+"friends_online_few" = "$1 друга он-лайн";
+"friends_online_many" = "$1 друзей он-лайн";
+"friends_online_other" = "$1 друзей он-лайн";
 
 "friends_list_zero" = "У Вас пока нет друзей";
 "friends_list_one" = "У Вас $1 друг";
@@ -246,6 +254,12 @@
 "subscriptions_few" = "$1 подписки";
 "subscriptions_many" = "$1 подписок";
 "subscriptions_other" = "$1 подписок";
+
+"friends_list_online_zero" = "У Вас пока нет друзей он-лайн";
+"friends_list_online_one" = "У Вас $1 друг он-лайн";
+"friends_list_online_few" = "У Вас $1 друга он-лайн";
+"friends_list_online_many" = "У Вас $1 друзей он-лайн";
+"friends_list_online_other" = "У Вас $1 друзей он-лайн";
 
 /* Group */
 
