--- a/locales/by.strings
+++ b/locales/by.strings
@@ -123,12 +123,20 @@
 "incoming_req" = "Падпісанты";
 "outcoming_req" = "Заяўкі";
 "req" = "Заяўкі";
+"friends_online" = "Сябры ан-лайн";
+"all_friends" = "Ўсе сябры";
 
 "friends_zero" = "Няма сяброў";
 "friends_one" = "$1 сябар";
-"friends_few" = "$1  аднаго";
+"friends_few" = "$1 аднаго";
 "friends_many" = "$1 сяброў";
 "friends_other" = "$1 сяброў";
+
+"friends_online_zero" = "Няма сяброў ан-лайн";
+"friends_online_one" = "$1 сябар ан-лайн";
+"friends_online_few" = "$1 аднаго ан-лайн";
+"friends_online_many" = "$1 сяброў ан-лайн";
+"friends_online_other" = "$1 сяброў ан-лайн";
 
 "followers_zero" = "Няма падпісчыкаў";
 "followers_one" = "$1 падпісант";
@@ -141,6 +149,18 @@
 "subscriptions_few" = "$1 падпіскі";
 "subscriptions_many" = "$1 падпісак";
 "subscriptions_other" = "$1 падпісак";
+
+"friends_list_zero" = "У Вас пака няма сяброў";
+"friends_list_one" = "У Вас $1 сябар";
+"friends_list_few" = "У Вас $1 сябра";
+"friends_list_many" = "У Вас $1 сяброў";
+"friends_list_other" = "У Вас $1 сяброў";
+
+"friends_list_online_zero" = "У Вас пака няма сяброў ан-лайн";
+"friends_list_online_one" = "У Вас $1 сябар ан-лайн";
+"friends_list_online_few" = "У Вас $1 сябра ан-лайн";
+"friends_list_online_many" = "У Вас $1 сяброў ан-лайн";
+"friends_list_online_other" = "У Вас $1 сяброў ан-лайн";
 
 /* Group */
 
