--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -155,6 +155,10 @@
 "post_writes_m" = "написал";
 "post_writes_f" = "написала";
 "post_writes_g" = "опубликовали";
+"post_deact_m" = "удалил страницу со словами:";
+"post_deact_f" = "удалила страницу со словами:";
+"post_deact_silent_m" = "молча удалил свою страницу.";
+"post_deact_silent_f" = "молча удалила свою страницу.";
 "wall" = "Стена";
 "post" = "Запись";
 "write" = "Написать";
@@ -538,6 +542,10 @@
 "profile_deactivate_reason_5" = "Мою страницу не комментируют";
 "profile_deactivate_reason_5_text" = "Меня никто не смотрит здесь и это грустно. Вы пожалеете о том, что я ушёл.";
 "profile_deactivate_reason_6" = "Другая причина";
+
+"profile_deactivated_msg" = "Ваша страница <b>удалена</b>.<br/><br/>Если Вы захотите снова начать пользоваться сайтом, Вы можете <a href='/settings/reactivate'>восстановить свою страницу</a> до $1.";
+"profile_deactivated_status" = "Страница удалена";
+"profile_deactivated_info" = "Страница пользователя удалена.<br/>Информация недоступна.";
 
 "share_with_friends" = "Рассказать друзьям";
 
