Hotfix UA locale

--- a/locales/ua.strings
+++ b/locales/ua.strings
@@ -57,7 +57,7 @@
 
 /* Profile information */
 
-"select_language" = "обрати мову";
+"select_language" = "Обрати мову";
 "edit" = "Редагувати";
 "birth_date" = "День нарождення";
 "registration_date" = "Дата реєстрації";
@@ -771,7 +771,7 @@
 
 /* Invite */
 
-invite" = "Запросити";
+"invite" = "Запросити";
 "you_can_invite" = "Ви можете запросити своїх друзів або знайомих до соціальної мережі за допомогою індивідуального посилання:";
 "you_can_invite_2" = "Прикладіть це посилання до вашого поідомлення. Користувач зареєструється, і він відразу з'явиться у вас у друзях.";
 
