--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -155,6 +155,10 @@
 "post_writes_m" = "написал";
 "post_writes_f" = "написала";
 "post_writes_g" = "опубликовали";
+"post_deact_m" = "удалил страницу со словами:";
+"post_deact_f" = "удалила страницу со словами:";
+"post_deact_silent_m" = "молча удалил свою страницу.";
+"post_deact_silent_f" = "молча удалила свою страницу.";
 "wall" = "Стена";
 "post" = "Запись";
 "write" = "Написать";
@@ -522,6 +526,28 @@
 "ad_poster" = "Рекламный плакат";
 
 "email_change_confirm_message" = "Чтобы изменение вступило в силу, подтвердите ваш новый адрес электронной почты. Мы отправили инструкции на него.";
+
+"profile_deactivate" = "Удаление страницы";
+"profile_deactivate_button" = "Удалить страницу";
+"profile_deactivate_header" = "Мы сожалеем, что Вы хотите удалить свою страницу. Поэтому, Вы можете указать причину удаления и Ваше сообщение по этому поводу. Мы читаем Ваши отзывы и пытаемся сделать сайт лучше!";
+"profile_deactivate_reason_header" = "Пожалуйста, укажите причину удаления Вашей страницы";
+"profile_deactivate_reason_1" = "У меня есть другая страница на сайте";
+"profile_deactivate_reason_1_text" = "Я создал новую страницу и теперь хочу подтереть своё прошлое.";
+"profile_deactivate_reason_2" = "Сайт отнимает у меня слишком много времени";
+"profile_deactivate_reason_2_text" = "Пусть этот сайт хорош и прекрасен, но он отнимает у меня время, которое мне нужно для работы и жизни.";
+"profile_deactivate_reason_3" = "Сайт содержит слишком много неприемлемых материалов";
+"profile_deactivate_reason_3_text" = "Я нашёл достаточно порнографии и пиратского контента - хватит на всю жизнь. Теперь я ухожу.";
+"profile_deactivate_reason_4" = "Меня беспокоит безопасность моих данных";
+"profile_deactivate_reason_4_text" = "За мной следят и мне страшно здесь находится. Извините, я вынужден уйти.";
+"profile_deactivate_reason_5" = "Мою страницу не комментируют";
+"profile_deactivate_reason_5_text" = "Меня никто не смотрит здесь и это грустно. Вы пожалеете о том, что я ушёл.";
+"profile_deactivate_reason_6" = "Другая причина";
+
+"profile_deactivated_msg" = "Ваша страница <b>удалена</b>.<br/><br/>Если Вы захотите снова начать пользоваться сайтом, Вы можете <a href='/settings/reactivate'>восстановить свою страницу</a> до $1.";
+"profile_deactivated_status" = "Страница удалена";
+"profile_deactivated_info" = "Страница пользователя удалена.<br/>Информация недоступна.";
+
+"share_with_friends" = "Рассказать друзьям";
 
 /* Two-factor authentication */
 
