--- a/locales/ua.strings
+++ b/locales/ua.strings
@@ -157,6 +157,10 @@
 "post_writes_m" = "написав";
 "post_writes_f" = "написала";
 "post_writes_g" = "опублікували";
+"post_deact_m" = "видалив сторінку зі словами:";
+"post_deact_f" = "видалила сторінку зі словами:";
+"post_deact_silent_m" = "мовчки видалив свою сторінку.";
+"post_deact_silent_f" = "мовчки видалила свою сторінку.";
 "wall" = "Стіна";
 "post" = "Запис";
 "write" = "Написати";
@@ -522,6 +526,28 @@
 "ad_poster" = "Рекламний плакат";
 
 "email_change_confirm_message" = "Щоб зміни набули чинності, підтвердьте вашу нову адресу електронної пошти. Ми надіслали інструкції на нього.";
+
+"profile_deactivate" = "Видалення сторінки";
+"profile_deactivate_button" = "Видалити сторінку";
+"profile_deactivate_header" = "Ми шкодуємо, що Ви бажаєте видалити свою сторінку. Тому, Ви можете вказати причину видалення та Ваше повідомлення з цього приводу. Ми читаємо Ваші відгуки та намагаємося зробити сайт кращим!";
+"profile_deactivate_reason_header" = "Будь ласка, вкажіть причину видалення Вашої сторінки";
+"profile_deactivate_reason_1" = "У мене є інший обліковий запис на сайті";
+"profile_deactivate_reason_1_text" = "Я створив нову сторінку, і тепер хочу стерти своє минуле.";
+"profile_deactivate_reason_2" = "Сайт забирає в мене надто багато часу";
+"profile_deactivate_reason_2_text" = "Нехай цей сайт хороший і прекрасний, але він забирає у мене час, який мені потрібний для роботи та життя.";
+"profile_deactivate_reason_3" = "Сайт містить дуже багато неприйнятних матеріалів";
+"profile_deactivate_reason_3_text" = "Я знайшов достатньо порнографії та піратського контенту – вистачить на все життя. Тепер я йду.";
+"profile_deactivate_reason_4" = "Мене турбує безпека моїх даних";
+"profile_deactivate_reason_4_text" = "За мною стежать і мені страшно тут. Я мушу піти.";
+"profile_deactivate_reason_5" = "Мою сторінку не коментують";
+"profile_deactivate_reason_5_text" = "Мене ніхто не дивиться тут, і це сумно. Ви пошкодуєте, що я пішов!";
+"profile_deactivate_reason_6" = "Інша причина";
+
+"profile_deactivated_msg" = "Ваша сторінка <b>видалена</b>.<br/><br/>Якщо Ви захочете знову почати користуватися сайтом, Ви можете <a href='/settings/reactivate'>відновити свою сторінку</a> до $1.";
+"profile_deactivated_status" = "Сторінка видалена";
+"profile_deactivated_info" = "Сторінку користувача видалено.<br/>Подробиці недоступні.";
+
+"share_with_friends" = "Розповісти друзям";
 
 /* Two-factor authentication */
 
