"Показать больше" в постах (fixed)
#570

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -179,6 +179,7 @@
 "wall_archive_succ_descr" = "Now it's in the archive.";
 "wall_unarchive_succ" = "The post has been restored";
 "wall_unarchive_succ_descr" = "Now it's visible to users again.";
+"wall_show_more" = "Show more...";
 
 "no_comments" = "No comments";
 
