--- a/locales/ua.strings
+++ b/locales/ua.strings
@@ -59,7 +59,7 @@
 
 "select_language" = "Обрати мову";
 "edit" = "Редагувати";
-"birth_date" = "День нарождення";
+"birth_date" = "День народження";
 "registration_date" = "Дата реєстрації";
 "hometown" = "Рідне місто";
 "this_is_you" = "це Ви";
