--- a/locales/en.strings
+++ b/locales/en.strings
@@ -357,6 +357,10 @@
 "notes_one" = "$1 note";
 "notes_other" = "$1 notes";
 "notes_start_screen" = "With notes, you can share your events with friends and see what's going on with them.";
+"note_preview" = "Preview draft";
+"note_preview_warn" = "Preview mode active";
+"note_preview_warn_details" = "Notes may change their behaviour or looks after being saved. Also, try not to use preview very often.";
+"note_preview_empty_err" = "Preview of empty or nameless note? Why, Mr. White?";
 
 "notes_list_zero" = "No notes found";
 "notes_list_one" = "$1 note found";
