--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -383,6 +383,10 @@
 "edit_note" = "Редактировать заметку";
 "actions" = "Действия";
 "notes_start_screen" = "С помощью заметок Вы можете делиться событиями из жизни с друзьями, а так же быть в курсе того, что происходит у них.";
+"note_preview" = "Предпросмотр";
+"note_preview_warn" = "Это всего лишь предпросмотр";
+"note_preview_warn_details" = "После сохранения заметки могут выглядеть иначе. К тому же, не вызывайте предпросмотр слишком часто.";
+"note_preview_empty_err" = "Зачем вам предпросмотр для заметки без имени или содержания?";
 
 "edited" = "Отредактировано";
 
